home.css
/* ... */
/*Navigation */

nav {
  
  padding-top: 35px;
  text-align: center;
  
}

nav ul {
  display: block;
}

nav ul li {
  position: relative;
  display: inline-block;
  top: 10px;
}

nav ul li:not(:first-child) {
  margin-left: 48px;
}

nav ul li:last-child {
  margin-right: 24px;
}

nav ul li a {
  display: inline-block;
  outline: none;
  color: #fff;
  font-family: Blender Pro;
  text-decoration: none;
  font-size: 19px;
  text-transform: uppercase;
  letter-spacing: 1.2px;
  font-weight: 100;
  cursor: pointer;
}

nav ul li a:hover {

  color: #FCEE09;
  transition: 0.5s;
}

.nav-wrapper ul li:nth-child(1) a {

color: #FCEE09;
font-weight: 200;
}

@media screen and (max-width: 864px) {


  .nav-wrapper {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: -1;
        background: #FCEE09;
        opacity: 0;
        transition: all 0.2s ease;
  }

  .nav-wrapper ul {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        width: 100%;
  }

  .nav-wrapper ul li {
        display: block;
        float: none;
        width: 100%;
        text-align: right;
        margin-bottom: 10px;
  }

  .nav-wrapper ul li:nth-child(1) a {
        transition-delay: 0.2s;
        color: #020106;
  }

  .nav-wrapper ul li:nth-child(2) a {
        transition-delay: 0.3s;
  }

  .nav-wrapper ul li:nth-child(3) a {
        transition-delay: 0.4s;
  }

  .nav-wrapper ul li:nth-child(4) a {
        transition-delay: 0.5s;
  }

  .nav-wrapper ul li:not(:first-child) {
        margin-left: 0;
  }

  .nav-wrapper ul li a {
        padding: 20px 24px;
        opacity: 0;
        color: #020106;
        font-size: 25px;
        text-transform: uppercase;
        font-family: Blender Pro;
        font-weight: 200;
        letter-spacing: 1.2px;
        transform: translateX(-20px);
        transition: all 0.2s ease;
  }

  .nav-btn {
        position: fixed;
        right: 10px;
        top: 10px;
        display: block;
        width: 48px;
        height: 48px;
        cursor: pointer;
        z-index: 9999;
        border-radius: 50%;
  }

  .nav-btn i {
        display: block;
        width: 20px;
        height: 2px;
        background: #fff;
        border-radius: 2px;
        margin-left: 14px;
  }

  .nav-btn i:nth-child(1) {
        margin-top: 16px;
  }

  .nav-btn i:nth-child(2) {
        margin-top: 4px;
        opacity: 1;
  }

  .nav-btn i:nth-child(3) {
        margin-top: 4px;
  }
}

#nav:checked + .nav-btn {
  transform: rotate(45deg);
}

#nav:checked + .nav-btn i {
  background: #000;
  transition: transform 0.2s ease;
}

#nav:checked + .nav-btn i:nth-child(1) {
  transform: translateY(6px) rotate(180deg);
}

#nav:checked + .nav-btn i:nth-child(2) {
  opacity: 0;
}

#nav:checked + .nav-btn i:nth-child(3) {
  transform: translateY(-6px) rotate(90deg);
}

#nav:checked ~ .nav-wrapper {
  z-index: 9990;
  opacity: 1;
}

#nav:checked ~ .nav-wrapper ul li a {
  opacity: 1;
  transform: translateX(0);
}

.hidden {
  display: none;
}

/*Social Media Icons */

.social_box {

  position: absolute;
  left: 88px;
  top: 780px;
  padding-bottom: 150px;
}

.github img {

  position: absolute;
  top: 800px;
  left: 125px;
  transition: .5s;
  cursor: pointer;
}


.youtube img {

  position: absolute;
  top: 845px;
  left: 125px;
  transition: .5s;
  cursor: pointer;
}


.instagram img {

  position: absolute;
  top: 890px;
  left: 125px;
  transition: .5s;
  cursor: pointer;
}


.linkedin img {

  position: absolute;
  top: 935px;
  left: 125px;
  transition: .5s;
  cursor: pointer;

}


.icons_container {

  position: absolute;
  top: 16px;
  left: 2px;
}

.social_container {

  position: absolute;
  top: -90px;
  left: -20px;
  padding-bottom: 50px;
}


/*Footer */

.footer h2 {
  position: relative;
  top: 930px;
  padding-bottom: 45px;
  text-align: center;
  color: #fff;
  font-weight: 100;
  font-size: 15px;
}







/*Optimization */
@media only screen and (min-width: 320px) and (max-width: 480px) {
  

  .text_header h1 {

      font-size: 30px !important;
  }

  .text_header {

      left: 80px !important;
      top: 250px !important;
  }


  .tagline h2 {
      position: relative !important;
      overflow-wrap: break-word !important;
      font-size: 12px !important;
  }

  .tagline {

      position: relative;
      left: -202px !important;
      top: -225px !important;
  }

  .button_container {

      position: absolute;
      left: 68px !important;
      top: 380px !important;
      
  }

  
  button,button::after{
      width: 125px !important;
      height:45px !important;
      font-size: 12px !important;
      line-height: 45px !important;
      text-align: center;
      margin: auto;
      font-family: Blender Pro;
      font-weight:100;
      background:linear-gradient(45deg,transparent 5%,#FD3649 5%);
      border:0;
      color:#fff;
      letter-spacing:3px;
      box-shadow:6px 0 0 #00E6F6;
      position:relative;
    
    }
  

  
  .social_container {

      transform: scale(0.7) !important;
      top: -85px !important;
      left: -38px !important;
  }

  .footer {

      position: relative;
      top: -160px;

  }







}


@media only screen and (min-width: 360px) and (max-width: 765px) {



  .text_header h1 {

      font-size: 50px;
  }

  .text_header {

      left: 105px;
      top: 295px;
  }

  .tagline h2 {
      position: relative;
      overflow-wrap: break-word;
      font-size: 16px;
  }

  .tagline {

      position: relative;
      left: -175px;
      top: -190px;
  }

  .button_container {
    transform: scale(0.8);
      position: absolute;
      left: 90px;
      top: 440px;
      
  }
  
  .social_container {

      transform: scale(0.8);
      top: -40px;
      left: -30px;
  }

  .footer h2 {

    top: 850px;
  }



}
/* ... */

